# mechcommander2

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  EULA.rtf  LICENSE  README.md  maint.sh  original_source.txt  sedcmd.sh
game/assets/binaries/: placeholder.txt
game/assets/graphics/: abbey11.d3f  abbey14.d3f  agencyfb.d3f  agencyfb10.d3f  agencyfb11.d3f  agencyfb13.d3f  agencyfb14.d3f  agencyfb20.d3f  arial8.d3f  arial8.tga  arial9chat.tga  arial9game.tga  arialblack11.d3f  arialblack9.d3f  arialnarrow6.d3f  arialnarrow8.d3f  arialnarrow9.d3f  blade11.d3f  font.tga  impact11.d3f  impact12.d3f  impact13.d3f  impact14.d3f  impact15.d3f  impact16.d3f  impact18.d3f  impact20.d3f  impact7.d3f  impact8.d3f  impact9.d3f  lucidaconsol7.d3f
game/data/: contents.txt
game/data/art/: mcl_cm_op_sample.fit  mcl_cm_op_sample_1_mission.fit  mcl_cm_op_sample_2_missions.fit  mcl_cm_op_sample_3_missions.fit  mcl_cm_op_sample_4_missions.fit
game/data/effects/: mc2.fx
game/data/movies/: bubba.tga  bubba1.bik  bubba2.bik  bubba3.bik  bubba4.bik  choice_1.bik  choice_2.bik  choice_3.bik  choice_4.bik  chopper.tga  chopper1.bik  chopper2.bik  chopper3.bik  chopper4.bik  claymor1.bik  claymor2.bik  claymor3.bik  claymor4.bik  claymore.tga  cobra.tga  cobra1.bik  cobra2.bik  cobra3.bik  cobra4.bik  credits.bik  creep.tga  creep1.bik  creep2.bik  creep3.bik  creep4.bik  dagger.tga  dagger1.bik  dagger2.bik  dagger3.bik  dagger4.bik  flash.tga  flash1.bik  flash2.bik  flash3.bik  flash4.bik  (+168 more)
game/data/objects/: feet.pak  object2.pak
game/data/sound/: betty.pak  noise.pak  (+31 more)
source/: .editorconfig  initial_preparations.txt  mechcmd2.sln  mechcmd2_vc8.sln  mechcmd2_vc9.sln
source/ablscript/: abl.h  abldbug.cpp  abldbug.h  abldecl.cpp  ablenv.cpp  ablenv.h  ablerr.cpp  ablerr.h  ablexec.cpp  ablexec.h  ablexpr.cpp  ablgen.h  ablparse.h  ablrtn.cpp  ablscan.cpp  ablscan.h  ablstd.cpp  ablstmt.cpp  ablsymt.cpp  ablsymt.h  ablxexpr.cpp  ablxstd.cpp  ablxstmt.cpp
source/ablt/: ablmc2.cpp  ablt.cpp  ablt.rc  resource.h  stdafx.cpp
source/build.vs/: ablt.vcproj  ablt.vcxproj  ablt.vcxproj.filters  ablt_vc8.vcproj  ablt_vc9.vcproj  aseconv.vcxproj  aseconv.vcxproj.filters  aseconv_vc8.vcproj  aseconv_vc9.vcproj  editor.vcproj  editor.vcxproj  editor.vcxproj.filters  editor_vc8.vcproj  editor_vc9.vcproj  gameos.vcproj  gameos.vcxproj  gameos.vcxproj.filters  gameos_vc8.vcproj  gameos_vc9.vcproj  gosfx.vcproj  gosfx.vcxproj  gosfx.vcxproj.filters  gosfx_vc8.vcproj  gosfx_vc9.vcproj  gui.vcproj  gui.vcxproj  gui.vcxproj.filters  gui_vc8.vcproj  gui_vc9.vcproj  mc2res.vcproj  mc2res.vcxproj  mc2res.vcxproj.filters  mc2res_vc8.vcproj  mc2res_vc9.vcproj  mclib.vcproj  mclib.vcxproj  mclib.vcxproj.filters  mclib_vc8.vcproj  mclib_vc9.vcproj  mechcmd2.vcproj  (+20 more)
source/codetest/: module.cpp  module.h  resource.cpp
source/config/: system.cfg  vidcard.csv
source/directxtk/: directxtk.txt
source/editor/: action.cpp  action.h  booleanflagissetdialog.h  brush.h  buildingbrush.cpp  buildingbrush.h  buildinglink.cpp  buildinglink.h  buildingsettingsdlg.cpp  buildingsettingsdlg.h  campaigndata.cpp  campaigndata.h  campaigndialog.cpp  campaigndialog.h  choosebuildingdlg.cpp  choosebuildingdlg.h  chooseunitdlg.cpp  chooseunitdlg.h  damagebrush.cpp  damagebrush.h  dlgfileopen.cpp  dlgfileopen.h  dragtool.cpp  dragtool.h  dropzonebrush.cpp  dropzonebrush.h  editforestdlg.cpp  editor.cpp  editor.rc  editorcamera.h  editordata.cpp  editordata.h  editores.cpp  editorinterface.cpp  editorinterface.h  editormfc.cpp  editormfc.h  editorobjectmgr.cpp  editorobjectmgr.h  editorobjects.cpp  (+84 more)
source/gui/: aanim.cpp  aanim.h  aanimobject.cpp  aanimobject.h  abutton.cpp  abutton.h  aedit.cpp  aedit.h  afont.cpp  afont.h  alistbox.cpp  alistbox.h  ascroll.cpp  ascroll.h  asystem.cpp  asystem.h  gui.def  gui.rc  logisticsscreen.cpp  logisticsscreen.h  resource.h  stdafx.h
source/include/: common.h  dplay.h  ijl.h  mechclassids.h  mechresources.h  mechtypes.h  mechutils.h
source/mc2res/: bmech.ani  mc2res.cpp  mc2res.rc  mc2version.h  mech2.accdb  mechcommander2.s14  mechcommander2.ver  resource.h
source/mclib/: abl.h  abldbug.cpp  abldbug.h  abldecl.cpp  ablenv.cpp  ablenv.h  ablerr.cpp  ablerr.h  ablexec.cpp  ablexec.h  ablexpr.cpp  ablgen.h  ablparse.h  ablrtn.cpp  ablscan.cpp  ablscan.h  ablstd.cpp  ablstmt.cpp  ablsymt.cpp  ablsymt.h  ablxexpr.cpp  ablxstd.cpp  ablxstmt.cpp  alphapalette.cpp  appear.cpp  appear.h  apprtype.cpp  apprtype.h  bdactor.cpp  bdactor.h  bitflag.cpp  bitflag.h  camera.cpp  camera.h  celement.cpp  celement.h  celine.cpp  celine.h  cellip.cpp  cellip.h  (+150 more)
source/mechcmd2/: ablmc2.cpp  actor.cpp  actor.h  artlry.cpp  artlry.h  attributemeter.cpp  attributemeter.h  bldng.cpp  bldng.h  carnage.cpp  carnage.h  chatwindow.cpp  chatwindow.h  collsn.cpp  collsn.h  comndr.cpp  comndr.h  componentlistbox.cpp  componentlistbox.h  contact.cpp  contact.h  controlgui.cpp  controlgui.h  dartlry.h  dbldng.h  dcarnage.h  dcollsn.h  dcomndr.h  dcontact.h  debugging.cpp  debugging.h  delemntl.h  dgameobj.h  dgate.h  dgoal.h  dgroup.h  dgvehicl.h  dmech.h  dmover.h  dmultplyr.h  (+172 more)
source/patches/: initial_commit.diff
source/pch/: directx_pch.cpp  directx_pch.h  stdinc.cpp  stdinc.h
source/projects/: ablscript.vcproj  ablscript.vcxproj  ablscript.vcxproj.filters  ablt.vcproj  ablt.vcxproj  ablt.vcxproj.filters  aseconv.vcproj  aseconv.vcxproj  aseconv.vcxproj.filters  codetest.vcproj  directxtk12.vcproj  directxtk12.vcxproj  directxtk12.vcxproj.filters  editor.vcproj  editor.vcxproj  editor.vcxproj.filters  gameos.vcproj  gameos.vcxproj  gameos.vcxproj.filters  gosfx.vcproj  gosfx.vcxproj  gosfx.vcxproj.filters  gui.vcproj  gui.vcxproj  gui.vcxproj.filters  mc2res.vcproj  mc2res.vcxproj  mc2res.vcxproj.filters  mclib.vcproj  mclib.vcxproj  mclib.vcxproj.filters  mechcmd2.vcproj  mechcmd2.vcxproj  mechcmd2.vcxproj.filters  mechcommander.props  mechcommander.vsprops  mlr.vcproj  mlr.vcxproj  mlr.vcxproj.filters  packages.config  (+6 more)
source/viewer/: resource.h  stdafx.h  view.cpp  viewer.rc
(+1069 files in other folders)
