cmake_minimum_required(VERSION 3.6)
project(mechcommander2)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    source/build.vs/junktest.cpp
    source/gameos/include/3drasterizer.hpp
    source/gameos/include/acm.hpp
    source/gameos/include/controlmanager.hpp
    source/gameos/include/datestamp.hpp
    source/gameos/include/debugger.hpp
    source/gameos/include/debuggui.hpp
    source/gameos/include/debuginterface.hpp
    source/gameos/include/directx.hpp
    source/gameos/include/directxdebugging.hpp
    source/gameos/include/dllplatform.hpp
    source/gameos/include/dxrasterizer.hpp
    source/gameos/include/errorhandler.hpp
    source/gameos/include/eventid.hpp
    source/gameos/include/ezvector.hpp
    source/gameos/include/fileio.hpp
    source/gameos/include/filestream.hpp
    source/gameos/include/filetransfer.hpp
    source/gameos/include/flinkedlist.hpp
    source/gameos/include/font3d.hpp
    source/gameos/include/font3d_dbcs_storage.hpp
    source/gameos/include/font3d_dbcs_surface.hpp
    source/gameos/include/forcefeedback.hpp
    source/gameos/include/gameos.hpp
    source/gameos/include/globals.hpp
    source/gameos/include/gungamelist.h
    source/gameos/include/hash.h
    source/gameos/include/language.h
    source/gameos/include/linkedlist.hpp
    source/gameos/include/localizationmanager.hpp
    source/gameos/include/memorymanager.hpp
    source/gameos/include/mfcplatform.hpp
    source/gameos/include/music.hpp
    source/gameos/include/net.hpp
    source/gameos/include/net_header.hpp
    source/gameos/include/netgroup.hpp
    source/gameos/include/netplayer.hpp
    source/gameos/include/network.hpp
    source/gameos/include/networking.hpp
    source/gameos/include/networkingglobals.hpp
    source/gameos/include/networklobby.hpp
    source/gameos/include/networkmessages.hpp
    source/gameos/include/pch.hpp
    source/gameos/include/perf.h
    source/gameos/include/platform.hpp
    source/gameos/include/profiler.hpp
    source/gameos/include/registry.hpp
    source/gameos/include/session.hpp
    source/gameos/include/sessionmanager.hpp
    source/gameos/include/sound_channel.hpp
    source/gameos/include/sound_ds3dchannel.hpp
    source/gameos/include/sound_ds3dmixer.hpp
    source/gameos/include/sound_mixer.hpp
    source/gameos/include/sound_renderer.hpp
    source/gameos/include/sound_resource.hpp
    source/gameos/include/string.hpp
    source/gameos/include/texture_manager.hpp
    source/gameos/include/time.hpp
    source/gameos/include/toolos.hpp
    source/gameos/include/videoplayback.hpp
    source/gameos/include/windows.hpp
    source/gameos/include/winproc.hpp
    source/gameos/include/zping.h
    source/gameos/lib/x86/dllplatform/dllplatform.c
    source/gameos/lib/x86/gameos/3d_tl.c
    source/gameos/lib/x86/gameos/3dprimitives.c
    source/gameos/lib/x86/gameos/3drasterizer.c
    source/gameos/lib/x86/gameos/acm.c
    source/gameos/lib/x86/gameos/clipping.c
    source/gameos/lib/x86/gameos/controlmanager.c
    source/gameos/lib/x86/gameos/cpu.c
    source/gameos/lib/x86/gameos/debugger.c
    source/gameos/lib/x86/gameos/direct3d.c
    source/gameos/lib/x86/gameos/directdraw.c
    source/gameos/lib/x86/gameos/directinput.c
    source/gameos/lib/x86/gameos/idaref.h
    source/gameos/lib/x86/gameos/libraries.c
    source/gameos/lib/x86/gameos/memorymanager.c
    source/gameos/lib/x86/gameos/windows.c
    source/gameos/lib/x86/gameos/windowsdebugging.c
    source/gameos/lib/x86/gameos/winmain.c
    source/gameos/lib/x86/gameos/winproc.c
    source/gameos/lib/x86/gameplatform/gameplatform.c
    source/gameos/lib/x86/mfcplatform/mfcplatform.c
    source/gameos/src/startup/dllplatform.cpp
    source/gameos/src/startup/gameplatform.cpp
    source/gameos/src/startup/mfcplatform.cpp
    source/gameos/src/3d_tl.cpp
    source/gameos/src/3dprimitives.cpp
    source/gameos/src/3drasterizer.cpp
    source/gameos/src/acm.cpp
    source/gameos/src/clipping.cpp
    source/gameos/src/controlmanager.cpp
    source/gameos/src/cpu.cpp
    source/gameos/src/debugger.cpp
    source/gameos/src/debuggraphs.cpp
    source/gameos/src/debuggui.cpp
    source/gameos/src/debugmenus.cpp
    source/gameos/src/direct3d.cpp
    source/gameos/src/directdraw.cpp
    source/gameos/src/directinput.cpp
    source/gameos/src/directplay.cpp
    source/gameos/src/directshow.cpp
    source/gameos/src/directsound.cpp
    source/gameos/src/directx.cpp
    source/gameos/src/directxdebugging.cpp
    source/gameos/src/directxerrors.cpp
    source/gameos/src/dirtyrectangle.cpp
    source/gameos/src/dxrasterizer.cpp
    source/gameos/src/errordialogs.cpp
    source/gameos/src/errorhandler.cpp
    source/gameos/src/eventid.cpp
    source/gameos/src/exceptions.cpp
    source/gameos/src/exitgameos.cpp
    source/gameos/src/ezvector.cpp
    source/gameos/src/fileio.cpp
    source/gameos/src/font3d.cpp
    source/gameos/src/font3d_dbcs.cpp
    source/gameos/src/font3d_dbcs_storage.cpp
    source/gameos/src/font3d_dbcs_surface.cpp
    source/gameos/src/font3d_load.cpp
    source/gameos/src/forcefeedback.cpp
    source/gameos/src/games_gun.cpp
    source/gameos/src/games_lan.cpp
    source/gameos/src/globals.cpp
    source/gameos/src/goslog.cpp
    source/gameos/src/guids.cpp
    source/gameos/src/gungamelist.cpp
    source/gameos/src/gvserver.cpp
    source/gameos/src/imagehlp.cpp
    source/gameos/src/infblock.cpp
    source/gameos/src/infcodes.cpp
    source/gameos/src/infutil.cpp
    source/gameos/src/keyboard.cpp
    source/gameos/src/libraries.cpp
    source/gameos/src/loader_bmp.cpp
    source/gameos/src/loader_jpg.cpp
    source/gameos/src/loader_png.cpp
    source/gameos/src/loader_tga.cpp
    source/gameos/src/localizationmanager.cpp
    source/gameos/src/logfile.cpp
    source/gameos/src/machinedetails.cpp
    source/gameos/src/mail.cpp
    source/gameos/src/memorymanager.cpp
    source/gameos/src/mouse.cpp
    source/gameos/src/music.cpp
    source/gameos/src/net_globals.cpp
    source/gameos/src/net_main.cpp
    source/gameos/src/net_packet.cpp
    source/gameos/src/net_protocol.cpp
    source/gameos/src/net_routines.cpp
    source/gameos/src/net_threads.cpp
    source/gameos/src/nglog_mark.cpp
    source/gameos/src/perf.cpp
    source/gameos/src/profiler.cpp
    source/gameos/src/raid.cpp
    source/gameos/src/registry.cpp
    source/gameos/src/renderime.cpp
    source/gameos/src/renderstates.cpp
    source/gameos/src/rendertotexture.cpp
    source/gameos/src/resource.h
    source/gameos/src/sound_api.cpp
    source/gameos/src/sound_ds3dchannel.cpp
    source/gameos/src/sound_ds3dmixer.cpp
    source/gameos/src/sound_renderer.cpp
    source/gameos/src/sound_resource.cpp
    source/gameos/src/spew.cpp
    source/gameos/src/stdafx.cpp
    source/gameos/src/stdafx.h
    source/gameos/src/texture_api.cpp
    source/gameos/src/texture_convert.cpp
    source/gameos/src/texture_create.cpp
    source/gameos/src/texture_format.cpp
    source/gameos/src/texture_manager.cpp
    source/gameos/src/texture_mipmap.cpp
    source/gameos/src/texture_original.cpp
    source/gameos/src/texture_sysmem.cpp
    source/gameos/src/texture_update.cpp
    source/gameos/src/texture_vidmem.cpp
    source/gameos/src/threads.cpp
    source/gameos/src/thunkdlls.cpp
    source/gameos/src/time.cpp
    source/gameos/src/userinterface.cpp
    source/gameos/src/vertexbuffer.cpp
    source/gameos/src/videocard.cpp
    source/gameos/src/videoplayback.cpp
    source/gameos/src/windows.cpp
    source/gameos/src/windowsdebugging.cpp
    source/gameos/src/winmain.cpp
    source/gameos/src/winproc.cpp
    source/gameos/src/zping.cpp
    source/include/rapidxml-1.13/rapidxml.hpp
    source/include/rapidxml-1.13/rapidxml_iterators.hpp
    source/include/rapidxml-1.13/rapidxml_print.hpp
    source/include/rapidxml-1.13/rapidxml_utils.hpp
    source/include/dplay.h
    source/include/ijl.h
    source/include/mechclassids.h
    source/include/mechresources.h
    source/include/mechtypes.h
    source/mc2res/language.dll/resource.h
    source/mc2res/mc2version.h
    source/mc2res/resource.h
    source/mclib/gosfx/card.cpp
    source/mclib/gosfx/card.hpp
    source/mclib/gosfx/cardcloud.cpp
    source/mclib/gosfx/cardcloud.hpp
    source/mclib/gosfx/debriscloud.cpp
    source/mclib/gosfx/debriscloud.hpp
    source/mclib/gosfx/effect.cpp
    source/mclib/gosfx/effect.hpp
    source/mclib/gosfx/effectcloud.cpp
    source/mclib/gosfx/effectcloud.hpp
    source/mclib/gosfx/effectlibrary.cpp
    source/mclib/gosfx/effectlibrary.hpp
    source/mclib/gosfx/fcurve.cpp
    source/mclib/gosfx/fcurve.hpp
    source/mclib/gosfx/gosfx.cpp
    source/mclib/gosfx/gosfx.hpp
    source/mclib/gosfx/gosfxheaders.cpp
    source/mclib/gosfx/gosfxheaders.hpp
    source/mclib/gosfx/particlecloud.cpp
    source/mclib/gosfx/particlecloud.hpp
    source/mclib/gosfx/pertcloud.cpp
    source/mclib/gosfx/pertcloud.hpp
    source/mclib/gosfx/pointcloud.cpp
    source/mclib/gosfx/pointcloud.hpp
    source/mclib/gosfx/pointlight.cpp
    source/mclib/gosfx/pointlight.hpp
    source/mclib/gosfx/shape.cpp
    source/mclib/gosfx/shape.hpp
    source/mclib/gosfx/shapecloud.cpp
    source/mclib/gosfx/shapecloud.hpp
    source/mclib/gosfx/shardcloud.cpp
    source/mclib/gosfx/shardcloud.hpp
    source/mclib/gosfx/singleton.cpp
    source/mclib/gosfx/singleton.hpp
    source/mclib/gosfx/spinningcloud.cpp
    source/mclib/gosfx/spinningcloud.hpp
    source/mclib/gosfx/tube.cpp
    source/mclib/gosfx/tube.hpp
    source/mclib/mlr/gosimage.cpp
    source/mclib/mlr/gosimage.hpp
    source/mclib/mlr/gosimagepool.cpp
    source/mclib/mlr/gosimagepool.hpp
    source/mclib/mlr/gosvertex.cpp
    source/mclib/mlr/gosvertex.hpp
    source/mclib/mlr/gosvertex2uv.cpp
    source/mclib/mlr/gosvertex2uv.hpp
    source/mclib/mlr/gosvertexpool.hpp
    source/mclib/mlr/mlr.cpp
    source/mclib/mlr/mlr.hpp
    source/mclib/mlr/mlr_i_c_det_pmesh.cpp
    source/mclib/mlr/mlr_i_c_det_pmesh.hpp
    source/mclib/mlr/mlr_i_c_det_tmesh.cpp
    source/mclib/mlr/mlr_i_c_det_tmesh.hpp
    source/mclib/mlr/mlr_i_c_dt_pmesh.cpp
    source/mclib/mlr/mlr_i_c_dt_pmesh.hpp
    source/mclib/mlr/mlr_i_c_dt_tmesh.cpp
    source/mclib/mlr/mlr_i_c_dt_tmesh.hpp
    source/mclib/mlr/mlr_i_c_pmesh.cpp
    source/mclib/mlr/mlr_i_c_pmesh.hpp
    source/mclib/mlr/mlr_i_c_tmesh.cpp
    source/mclib/mlr/mlr_i_c_tmesh.hpp
    source/mclib/mlr/mlr_i_det_pmesh.cpp
    source/mclib/mlr/mlr_i_det_pmesh.hpp
    source/mclib/mlr/mlr_i_det_tmesh.cpp
    source/mclib/mlr/mlr_i_det_tmesh.hpp
    source/mclib/mlr/mlr_i_dt_pmesh.cpp
    source/mclib/mlr/mlr_i_dt_pmesh.hpp
    source/mclib/mlr/mlr_i_dt_tmesh.cpp
    source/mclib/mlr/mlr_i_dt_tmesh.hpp
    source/mclib/mlr/mlr_i_l_det_pmesh.cpp
    source/mclib/mlr/mlr_i_l_det_pmesh.hpp
    source/mclib/mlr/mlr_i_l_det_tmesh.cpp
    source/mclib/mlr/mlr_i_l_det_tmesh.hpp
    source/mclib/mlr/mlr_i_l_dt_pmesh.cpp
    source/mclib/mlr/mlr_i_l_dt_pmesh.hpp
    source/mclib/mlr/mlr_i_l_dt_tmesh.cpp
    source/mclib/mlr/mlr_i_l_dt_tmesh.hpp
    source/mclib/mlr/mlr_i_l_pmesh.cpp
    source/mclib/mlr/mlr_i_l_pmesh.hpp
    source/mclib/mlr/mlr_i_l_tmesh.cpp
    source/mclib/mlr/mlr_i_l_tmesh.hpp
    source/mclib/mlr/mlr_i_mt_pmesh.cpp
    source/mclib/mlr/mlr_i_mt_pmesh.hpp
    source/mclib/mlr/mlr_i_pmesh.cpp
    source/mclib/mlr/mlr_i_pmesh.hpp
    source/mclib/mlr/mlr_i_tmesh.cpp
    source/mclib/mlr/mlr_i_tmesh.hpp
    source/mclib/mlr/mlr_terrain.cpp
    source/mclib/mlr/mlr_terrain.hpp
    source/mclib/mlr/mlr_terrain2.cpp
    source/mclib/mlr/mlr_terrain2.hpp
    source/mclib/mlr/mlrambientlight.cpp
    source/mclib/mlr/mlrambientlight.hpp
    source/mclib/mlr/mlrcardcloud.cpp
    source/mclib/mlr/mlrcardcloud.hpp
    source/mclib/mlr/mlrclipper.cpp
    source/mclib/mlr/mlrclipper.hpp
    source/mclib/mlr/mlrclippingstate.cpp
    source/mclib/mlr/mlrclippingstate.hpp
    source/mclib/mlr/mlrcliptrick.hpp
    source/mclib/mlr/mlreffect.cpp
    source/mclib/mlr/mlreffect.hpp
    source/mclib/mlr/mlrheaders.cpp
    source/mclib/mlr/mlrheaders.hpp
    source/mclib/mlr/mlrindexedprimitivebase.cpp
    source/mclib/mlr/mlrindexedprimitivebase.hpp
    source/mclib/mlr/mlrindexedtrianglecloud.cpp
    source/mclib/mlr/mlrindexedtrianglecloud.hpp
    source/mclib/mlr/mlrinfinitelight.cpp
    source/mclib/mlr/mlrinfinitelight.hpp
    source/mclib/mlr/mlrinfinitelightwithfalloff.cpp
    source/mclib/mlr/mlrinfinitelightwithfalloff.hpp
    source/mclib/mlr/mlrlight.cpp
    source/mclib/mlr/mlrlight.hpp
    source/mclib/mlr/mlrlightmap.cpp
    source/mclib/mlr/mlrlightmap.hpp
    source/mclib/mlr/mlrlinecloud.cpp
    source/mclib/mlr/mlrlinecloud.hpp
    source/mclib/mlr/mlrlookuplight.cpp
    source/mclib/mlr/mlrlookuplight.hpp
    source/mclib/mlr/mlrngoncloud.cpp
    source/mclib/mlr/mlrngoncloud.hpp
    source/mclib/mlr/mlrpointcloud.cpp
    source/mclib/mlr/mlrpointcloud.hpp
    source/mclib/mlr/mlrpointlight.cpp
    source/mclib/mlr/mlrpointlight.hpp
    source/mclib/mlr/mlrprimitivebase.cpp
    source/mclib/mlr/mlrprimitivebase.hpp
    source/mclib/mlr/mlrshape.cpp
    source/mclib/mlr/mlrshape.hpp
    source/mclib/mlr/mlrsortbyorder.cpp
    source/mclib/mlr/mlrsortbyorder.hpp
    source/mclib/mlr/mlrsorter.cpp
    source/mclib/mlr/mlrsorter.hpp
    source/mclib/mlr/mlrspotlight.cpp
    source/mclib/mlr/mlrspotlight.hpp
    source/mclib/mlr/mlrstate.cpp
    source/mclib/mlr/mlrstate.hpp
    source/mclib/mlr/mlrtexture.cpp
    source/mclib/mlr/mlrtexture.hpp
    source/mclib/mlr/mlrtexturepool.cpp
    source/mclib/mlr/mlrtexturepool.hpp
    source/mclib/mlr/mlrtrianglecloud.cpp
    source/mclib/mlr/mlrtrianglecloud.hpp
    source/mclib/stuff/affinematrix.cpp
    source/mclib/stuff/affinematrix.hpp
    source/mclib/stuff/affinematrix_test.cpp
    source/mclib/stuff/angle.cpp
    source/mclib/stuff/angle.hpp
    source/mclib/stuff/angle_test.cpp
    source/mclib/stuff/armoroff.hpp
    source/mclib/stuff/armoron.hpp
    source/mclib/stuff/auto_container.hpp
    source/mclib/stuff/auto_ptr.hpp
    source/mclib/stuff/average.hpp
    source/mclib/stuff/chain.cpp
    source/mclib/stuff/chain.hpp
    source/mclib/stuff/chain_test.cpp
    source/mclib/stuff/color.cpp
    source/mclib/stuff/color.hpp
    source/mclib/stuff/database.cpp
    source/mclib/stuff/database.hpp
    source/mclib/stuff/extentbox.cpp
    source/mclib/stuff/extentbox.hpp
    source/mclib/stuff/filestream.cpp
    source/mclib/stuff/filestream.hpp
    source/mclib/stuff/filestream_test.cpp
    source/mclib/stuff/filestreammanager.cpp
    source/mclib/stuff/filestreammanager.hpp
    source/mclib/stuff/hash.cpp
    source/mclib/stuff/hash.hpp
    source/mclib/stuff/hash_test.cpp
    source/mclib/stuff/initialized_ptr.hpp
    source/mclib/stuff/iterator.cpp
    source/mclib/stuff/iterator.hpp
    source/mclib/stuff/line.cpp
    source/mclib/stuff/line.hpp
    source/mclib/stuff/linearmatrix.cpp
    source/mclib/stuff/linearmatrix.hpp
    source/mclib/stuff/linearmatrix_test.cpp
    source/mclib/stuff/link.cpp
    source/mclib/stuff/link.hpp
    source/mclib/stuff/marray.hpp
    source/mclib/stuff/matrix.cpp
    source/mclib/stuff/matrix.hpp
    source/mclib/stuff/matrix_test.cpp
    source/mclib/stuff/matrixstack.cpp
    source/mclib/stuff/matrixstack.hpp
    source/mclib/stuff/memoryblock.cpp
    source/mclib/stuff/memoryblock.hpp
    source/mclib/stuff/memoryblock_test.cpp
    source/mclib/stuff/memorystream.cpp
    source/mclib/stuff/memorystream.hpp
    source/mclib/stuff/memorystream_test.cpp
    source/mclib/stuff/motion.cpp
    source/mclib/stuff/motion.hpp
    source/mclib/stuff/mstring.cpp
    source/mclib/stuff/mstring.hpp
    source/mclib/stuff/mstring_test.cpp
    source/mclib/stuff/namelist.cpp
    source/mclib/stuff/namelist.hpp
    source/mclib/stuff/namelist_test.cpp
    source/mclib/stuff/node.cpp
    source/mclib/stuff/node.hpp
    source/mclib/stuff/noncopyable.hpp
    source/mclib/stuff/normal.cpp
    source/mclib/stuff/normal.hpp
    source/mclib/stuff/normal_test.cpp
    source/mclib/stuff/notationfile.cpp
    source/mclib/stuff/notationfile.hpp
    source/mclib/stuff/notationfile_test.cpp
    source/mclib/stuff/note.cpp
    source/mclib/stuff/note.hpp
    source/mclib/stuff/obb.cpp
    source/mclib/stuff/obb.hpp
    source/mclib/stuff/origin.cpp
    source/mclib/stuff/origin.hpp
    source/mclib/stuff/origin_test.cpp
    source/mclib/stuff/page.cpp
    source/mclib/stuff/page.hpp
    source/mclib/stuff/plane.cpp
    source/mclib/stuff/plane.hpp
    source/mclib/stuff/plug.cpp
    source/mclib/stuff/plug.hpp
    source/mclib/stuff/point3d.cpp
    source/mclib/stuff/point3d.hpp
    source/mclib/stuff/point3d_test.cpp
    source/mclib/stuff/polar.cpp
    source/mclib/stuff/polar.hpp
    source/mclib/stuff/random.cpp
    source/mclib/stuff/random.hpp
    source/mclib/stuff/random_test.cpp
    source/mclib/stuff/ray.cpp
    source/mclib/stuff/ray.hpp
    source/mclib/stuff/ray_test.cpp
    source/mclib/stuff/registeredclass.cpp
    source/mclib/stuff/registeredclass.hpp
    source/mclib/stuff/rotation.cpp
    source/mclib/stuff/rotation.hpp
    source/mclib/stuff/rotation_test.cpp
    source/mclib/stuff/safechain.cpp
    source/mclib/stuff/safechain.hpp
    source/mclib/stuff/safechain_test.cpp
    source/mclib/stuff/safesocket.cpp
    source/mclib/stuff/safesocket.hpp
    source/mclib/stuff/scalar.cpp
    source/mclib/stuff/scalar.hpp
    source/mclib/stuff/slot.cpp
    source/mclib/stuff/slot.hpp
    source/mclib/stuff/socket.cpp
    source/mclib/stuff/socket.hpp
    source/mclib/stuff/sortedchain.cpp
    source/mclib/stuff/sortedchain.hpp
    source/mclib/stuff/sortedchain_test.cpp
    source/mclib/stuff/sortedsocket.cpp
    source/mclib/stuff/sortedsocket.hpp
    source/mclib/stuff/sphere.cpp
    source/mclib/stuff/sphere.hpp
    source/mclib/stuff/stuff.cpp
    source/mclib/stuff/stuff.hpp
    source/mclib/stuff/stuffheaders.cpp
    source/mclib/stuff/stuffheaders.hpp
    source/mclib/stuff/style.cpp
    source/mclib/stuff/style.hpp
    source/mclib/stuff/table.cpp
    source/mclib/stuff/table.hpp
    source/mclib/stuff/table_test.cpp
    source/mclib/stuff/trace.cpp
    source/mclib/stuff/trace.hpp
    source/mclib/stuff/tree.cpp
    source/mclib/stuff/tree.hpp
    source/mclib/stuff/tree_test.cpp
    source/mclib/stuff/unitvector.cpp
    source/mclib/stuff/unitvector.hpp
    source/mclib/stuff/unitvector_test.cpp
    source/mclib/stuff/vector2d.hpp
    source/mclib/stuff/vector3d.cpp
    source/mclib/stuff/vector3d.hpp
    source/mclib/stuff/vector3d_test.cpp
    source/mclib/stuff/vector4d.cpp
    source/mclib/stuff/vector4d.hpp
    source/mclib/stuff/vector4d_test.cpp
    source/mclib/abl.h
    source/mclib/abldbug.cpp
    source/mclib/abldbug.h
    source/mclib/abldecl.cpp
    source/mclib/ablenv.cpp
    source/mclib/ablenv.h
    source/mclib/ablerr.cpp
    source/mclib/ablerr.h
    source/mclib/ablexec.cpp
    source/mclib/ablexec.h
    source/mclib/ablexpr.cpp
    source/mclib/ablgen.h
    source/mclib/ablparse.h
    source/mclib/ablrtn.cpp
    source/mclib/ablscan.cpp
    source/mclib/ablscan.h
    source/mclib/ablstd.cpp
    source/mclib/ablstmt.cpp
    source/mclib/ablsymt.cpp
    source/mclib/ablsymt.h
    source/mclib/ablxexpr.cpp
    source/mclib/ablxstd.cpp
    source/mclib/ablxstmt.cpp
    source/mclib/alphapalette.cpp
    source/mclib/appear.cpp
    source/mclib/appear.h
    source/mclib/apprtype.cpp
    source/mclib/apprtype.h
    source/mclib/bdactor.cpp
    source/mclib/bdactor.h
    source/mclib/bitflag.cpp
    source/mclib/bitflag.h
    source/mclib/camera.cpp
    source/mclib/camera.h
    source/mclib/celement.cpp
    source/mclib/celement.h
    source/mclib/celine.cpp
    source/mclib/celine.h
    source/mclib/cellip.cpp
    source/mclib/cellip.h
    source/mclib/cepane.cpp
    source/mclib/cepane.h
    source/mclib/cepoly.h
    source/mclib/cevfx.cpp
    source/mclib/cevfx.h
    source/mclib/cident.cpp
    source/mclib/cident.h
    source/mclib/clip.h
    source/mclib/clouds.cpp
    source/mclib/clouds.h
    source/mclib/cmponent.cpp
    source/mclib/cmponent.h
    source/mclib/color.cpp
    source/mclib/color.h
    source/mclib/crater.cpp
    source/mclib/crater.h
    source/mclib/csvfile.cpp
    source/mclib/csvfile.h
    source/mclib/dabldbug.h
    source/mclib/dablenv.h
    source/mclib/dappear.h
    source/mclib/daprtype.h
    source/mclib/dbasegui.h
    source/mclib/dbitflag.h
    source/mclib/dcamera.h
    source/mclib/dcsvfile.h
    source/mclib/debugging.cpp
    source/mclib/debugging.h
    source/mclib/dffile.h
    source/mclib/dfile.h
    source/mclib/dgamelog.h
    source/mclib/dheap.h
    source/mclib/dident.h
    source/mclib/dinifile.h
    source/mclib/dmapdata.h
    source/mclib/dmovemgr.h
    source/mclib/dobjblck.h
    source/mclib/dobjclass.h
    source/mclib/dpacket.h
    source/mclib/dquad.h
    source/mclib/dstd.h
    source/mclib/dterrain.h
    source/mclib/dterrtxm.h
    source/mclib/dvertex.h
    source/mclib/err.cpp
    source/mclib/err.h
    source/mclib/fastfile.cpp
    source/mclib/fastfile.h
    source/mclib/ffent.h
    source/mclib/ffile.cpp
    source/mclib/ffile.h
    source/mclib/file.cpp
    source/mclib/file.h
    source/mclib/floathelp.cpp
    source/mclib/floathelp.h
    source/mclib/gamelog.cpp
    source/mclib/gamelog.h
    source/mclib/genactor.cpp
    source/mclib/genactor.h
    source/mclib/gvactor.cpp
    source/mclib/gvactor.h
    source/mclib/heap.cpp
    source/mclib/heap.h
    source/mclib/inifile.cpp
    source/mclib/inifile.h
    source/mclib/lz.h
    source/mclib/lzcomp.cpp
    source/mclib/lzdecomp.cpp
    source/mclib/mapdata.cpp
    source/mclib/mapdata.h
    source/mclib/mathfunc.cpp
    source/mclib/mathfunc.h
    source/mclib/mclib.h
    source/mclib/mech3d.cpp
    source/mclib/mech3d.h
    source/mclib/mouse.cpp
    source/mclib/move.cpp
    source/mclib/move.h
    source/mclib/msl.cpp
    source/mclib/msl.h
    source/mclib/msodw.h
    source/mclib/mstates.h
    source/mclib/objectappearance.h
    source/mclib/objstatus.h
    source/mclib/packet.cpp
    source/mclib/packet.h
    source/mclib/paths.cpp
    source/mclib/paths.h
    source/mclib/pqueue.cpp
    source/mclib/pqueue.h
    source/mclib/quad.cpp
    source/mclib/quad.h
    source/mclib/resizeimage.h
    source/mclib/resource.h
    source/mclib/routines.cpp
    source/mclib/scale.cpp
    source/mclib/scale.h
    source/mclib/sortlist.cpp
    source/mclib/sortlist.h
    source/mclib/sounds.h
    source/mclib/soundsys.cpp
    source/mclib/soundsys.h
    source/mclib/stdafx.cpp
    source/mclib/stdafx.h
    source/mclib/tacmap.cpp
    source/mclib/tacmap.h
    source/mclib/terrain.cpp
    source/mclib/terrain.h
    source/mclib/terrtxm.cpp
    source/mclib/terrtxm.h
    source/mclib/terrtxm2.cpp
    source/mclib/terrtxm2.h
    source/mclib/tgainfo.cpp
    source/mclib/tgainfo.h
    source/mclib/tgl.cpp
    source/mclib/tgl.h
    source/mclib/tglpp.cpp
    source/mclib/timing.cpp
    source/mclib/timing.h
    source/mclib/txmconv.cpp
    source/mclib/txmconv.h
    source/mclib/txmmgr.cpp
    source/mclib/txmmgr.h
    source/mclib/userinput.cpp
    source/mclib/userinput.h
    source/mclib/utilities.cpp
    source/mclib/utilities.h
    source/mclib/vertex.h
    source/mclib/vfx.h
    source/mclib/vfx_ellipse.cpp
    source/mclib/vfx_map_polygon.cpp
    source/mclib/vfx_transform.cpp
    source/mclib/vfx_translatedraw.cpp
    source/mclib/vfxtile.cpp
    source/mclib/vport.cpp
    source/mclib/vport.h
    source/mclib/weaponfx.cpp
    source/mclib/weaponfx.h
    source/mechcmd2/mechgui/aanim.cpp
    source/mechcmd2/mechgui/aanim.h
    source/mechcmd2/mechgui/aanimobject.cpp
    source/mechcmd2/mechgui/aanimobject.h
    source/mechcmd2/mechgui/abutton.cpp
    source/mechcmd2/mechgui/abutton.h
    source/mechcmd2/mechgui/aedit.cpp
    source/mechcmd2/mechgui/aedit.h
    source/mechcmd2/mechgui/afont.cpp
    source/mechcmd2/mechgui/afont.h
    source/mechcmd2/mechgui/alistbox.cpp
    source/mechcmd2/mechgui/alistbox.h
    source/mechcmd2/mechgui/ascroll.cpp
    source/mechcmd2/mechgui/ascroll.h
    source/mechcmd2/mechgui/asystem.cpp
    source/mechcmd2/mechgui/asystem.h
    source/mechcmd2/mechgui/logisticsscreen.cpp
    source/mechcmd2/mechgui/logisticsscreen.h
    source/mechcmd2/ablmc2.cpp
    source/mechcmd2/actor.cpp
    source/mechcmd2/actor.h
    source/mechcmd2/artlry.cpp
    source/mechcmd2/artlry.h
    source/mechcmd2/attributemeter.cpp
    source/mechcmd2/attributemeter.h
    source/mechcmd2/bldng.cpp
    source/mechcmd2/bldng.h
    source/mechcmd2/carnage.cpp
    source/mechcmd2/carnage.h
    source/mechcmd2/chatwindow.cpp
    source/mechcmd2/chatwindow.h
    source/mechcmd2/collsn.cpp
    source/mechcmd2/collsn.h
    source/mechcmd2/comndr.cpp
    source/mechcmd2/comndr.h
    source/mechcmd2/componentlistbox.cpp
    source/mechcmd2/componentlistbox.h
    source/mechcmd2/contact.cpp
    source/mechcmd2/contact.h
    source/mechcmd2/controlgui.cpp
    source/mechcmd2/controlgui.h
    source/mechcmd2/dartlry.h
    source/mechcmd2/dbldng.h
    source/mechcmd2/dcarnage.h
    source/mechcmd2/dcollsn.h
    source/mechcmd2/dcomndr.h
    source/mechcmd2/dcontact.h
    source/mechcmd2/debugging.cpp
    source/mechcmd2/debugging.h
    source/mechcmd2/delemntl.h
    source/mechcmd2/dgameobj.h
    source/mechcmd2/dgate.h
    source/mechcmd2/dgoal.h
    source/mechcmd2/dgroup.h
    source/mechcmd2/dgvehicl.h
    source/mechcmd2/dmech.h
    source/mechcmd2/dmover.h
    source/mechcmd2/dmultplyr.h
    source/mechcmd2/dobjmgr.h
    source/mechcmd2/dobjnum.h
    source/mechcmd2/dobjtype.h
    source/mechcmd2/dradio.h
    source/mechcmd2/dtacordr.h
    source/mechcmd2/dteam.h
    source/mechcmd2/dterrobj.h
    source/mechcmd2/dturret.h
    source/mechcmd2/dw.cpp
    source/mechcmd2/dwarrior.h
    source/mechcmd2/dweaponbolt.h
    source/mechcmd2/fastshp.cpp
    source/mechcmd2/forcegroupbar.cpp
    source/mechcmd2/forcegroupbar.h
    source/mechcmd2/gamecam.cpp
    source/mechcmd2/gamecam.h
    source/mechcmd2/gameobj.cpp
    source/mechcmd2/gameobj.h
    source/mechcmd2/gamesound.cpp
    source/mechcmd2/gamesound.h
    source/mechcmd2/gametacmap.cpp
    source/mechcmd2/gametacmap.h
    source/mechcmd2/gate.cpp
    source/mechcmd2/gate.h
    source/mechcmd2/goal.cpp
    source/mechcmd2/goal.h
    source/mechcmd2/group.cpp
    source/mechcmd2/group.h
    source/mechcmd2/gvehicl.cpp
    source/mechcmd2/gvehicl.h
    source/mechcmd2/infowindow.cpp
    source/mechcmd2/infowindow.h
    source/mechcmd2/keyboardref.cpp
    source/mechcmd2/keyboardref.h
    source/mechcmd2/light.cpp
    source/mechcmd2/light.h
    source/mechcmd2/loadscreen.cpp
    source/mechcmd2/loadscreen.h
    source/mechcmd2/logistics.cpp
    source/mechcmd2/logistics.h
    source/mechcmd2/logisticscomponent.cpp
    source/mechcmd2/logisticscomponent.h
    source/mechcmd2/logisticsdata.cpp
    source/mechcmd2/logisticsdata.h
    source/mechcmd2/logisticsdialog.cpp
    source/mechcmd2/logisticsdialog.h
    source/mechcmd2/logisticserrors.h
    source/mechcmd2/logisticsmech.cpp
    source/mechcmd2/logisticsmech.h
    source/mechcmd2/logisticsmechdisplay.cpp
    source/mechcmd2/logisticsmechdisplay.h
    source/mechcmd2/logisticsmechicon.cpp
    source/mechcmd2/logisticsmechicon.h
    source/mechcmd2/logisticsmissioninfo.cpp
    source/mechcmd2/logisticsmissioninfo.h
    source/mechcmd2/logisticspilot.cpp
    source/mechcmd2/logisticspilot.h
    source/mechcmd2/logisticspilotlistbox.cpp
    source/mechcmd2/logisticspilotlistbox.h
    source/mechcmd2/logisticsvariant.cpp
    source/mechcmd2/logisticsvariant.h
    source/mechcmd2/logmain.cpp
    source/mechcmd2/mainmenu.cpp
    source/mechcmd2/mainmenu.h
    source/mechcmd2/mc2movie.cpp
    source/mechcmd2/mc2movie.h
    source/mechcmd2/mech.cpp
    source/mechcmd2/mech.h
    source/mechcmd2/mechbayscreen.cpp
    source/mechcmd2/mechbayscreen.h
    source/mechcmd2/mechclass.h
    source/mechcmd2/mechcmd2.cpp
    source/mechcmd2/mechicon.cpp
    source/mechcmd2/mechicon.h
    source/mechcmd2/mechlabscreen.cpp
    source/mechcmd2/mechlabscreen.h
    source/mechcmd2/mechlistbox.cpp
    source/mechcmd2/mechlistbox.h
    source/mechcmd2/mechlopedia.cpp
    source/mechcmd2/mechlopedia.h
    source/mechcmd2/mechpurchasescreen.cpp
    source/mechcmd2/mechpurchasescreen.h
    source/mechcmd2/mission.cpp
    source/mechcmd2/mission.h
    source/mechcmd2/mission2.cpp
    source/mechcmd2/missionbegin.cpp
    source/mechcmd2/missionbegin.h
    source/mechcmd2/missionbriefingscreen.cpp
    source/mechcmd2/missionbriefingscreen.h
    source/mechcmd2/missiongui.cpp
    source/mechcmd2/missiongui.h
    source/mechcmd2/missionresults.cpp
    source/mechcmd2/missionresults.h
    source/mechcmd2/missionselectionscreen.cpp
    source/mechcmd2/missionselectionscreen.h
    source/mechcmd2/movemgr.cpp
    source/mechcmd2/movemgr.h
    source/mechcmd2/mover.cpp
    source/mechcmd2/mover.h
    source/mechcmd2/mpaddaiplayer.cpp
    source/mechcmd2/mpaddaiplayer.h
    source/mechcmd2/mpconnectiontype.cpp
    source/mechcmd2/mpconnectiontype.h
    source/mechcmd2/mpdirecttcpip.cpp
    source/mechcmd2/mpdirecttcpip.h
    source/mechcmd2/mpgamebrowser.cpp
    source/mechcmd2/mpgamebrowser.h
    source/mechcmd2/mphostgame.cpp
    source/mechcmd2/mphostgame.h
    source/mechcmd2/mploadmap.cpp
    source/mechcmd2/mploadmap.h
    source/mechcmd2/mpparameterscreen.cpp
    source/mechcmd2/mpparameterscreen.h
    source/mechcmd2/mpprefs.cpp
    source/mechcmd2/mpprefs.h
    source/mechcmd2/mpsetuparea.cpp
    source/mechcmd2/mpsetuparea.h
    source/mechcmd2/mpstats.cpp
    source/mechcmd2/mpstats.h
    source/mechcmd2/multplyr.cpp
    source/mechcmd2/multplyr.h
    source/mechcmd2/objblck.h
    source/mechcmd2/objective.cpp
    source/mechcmd2/objective.h
    source/mechcmd2/objmgr.cpp
    source/mechcmd2/objmgr.h
    source/mechcmd2/objtype.cpp
    source/mechcmd2/objtype.h
    source/mechcmd2/optionsarea.cpp
    source/mechcmd2/optionsarea.h
    source/mechcmd2/optionsscreenwrapper.cpp
    source/mechcmd2/optionsscreenwrapper.h
    source/mechcmd2/pausewindow.cpp
    source/mechcmd2/pausewindow.h
    source/mechcmd2/pilotreadyscreen.cpp
    source/mechcmd2/pilotreadyscreen.h
    source/mechcmd2/pilotreviewarea.cpp
    source/mechcmd2/pilotreviewarea.h
    source/mechcmd2/prefs.cpp
    source/mechcmd2/prefs.h
    source/mechcmd2/radio.cpp
    source/mechcmd2/radio.h
    source/mechcmd2/resource.h
    source/mechcmd2/salvagemecharea.cpp
    source/mechcmd2/salvagemecharea.h
    source/mechcmd2/saveload.cpp
    source/mechcmd2/simplecamera.cpp
    source/mechcmd2/simplecamera.h
    source/mechcmd2/simplecomponentlistbox.cpp
    source/mechcmd2/simplecomponentlistbox.h
    source/mechcmd2/stdafx.cpp
    source/mechcmd2/stdafx.h
    source/mechcmd2/tacordr.cpp
    source/mechcmd2/tacordr.h
    source/mechcmd2/team.cpp
    source/mechcmd2/team.h
    source/mechcmd2/terrobj.cpp
    source/mechcmd2/terrobj.h
    source/mechcmd2/trigger.cpp
    source/mechcmd2/trigger.h
    source/mechcmd2/turret.cpp
    source/mechcmd2/turret.h
    source/mechcmd2/unitdesg.h
    source/mechcmd2/vfxshape.cpp
    source/mechcmd2/vfxshape.h
    source/mechcmd2/warrior.cpp
    source/mechcmd2/warrior.h
    source/mechcmd2/weaponbolt.cpp
    source/mechcmd2/weaponbolt.h
    source/mechcmd2/weather.cpp
    source/mechcmd2/weather.h
    source/tools/ablt/ablmc2.cpp
    source/tools/ablt/ablt.cpp
    source/tools/ablt/resource.h
    source/tools/ablt/stdafx.cpp
    source/tools/ablt/stdafx.h
    source/tools/aseconv/ase2tgl.cpp
    source/tools/aseconv/resource.h
    source/tools/aseconv/stdafx.h
    source/tools/editor/action.cpp
    source/tools/editor/action.h
    source/tools/editor/booleanflagissetdialog.cpp
    source/tools/editor/booleanflagissetdialog.h
    source/tools/editor/brush.h
    source/tools/editor/buildingbrush.cpp
    source/tools/editor/buildingbrush.h
    source/tools/editor/buildinglink.cpp
    source/tools/editor/buildinglink.h
    source/tools/editor/buildingsettingsdlg.cpp
    source/tools/editor/buildingsettingsdlg.h
    source/tools/editor/campaigndata.cpp
    source/tools/editor/campaigndata.h
    source/tools/editor/campaigndialog.cpp
    source/tools/editor/campaigndialog.h
    source/tools/editor/choosebuildingdlg.cpp
    source/tools/editor/choosebuildingdlg.h
    source/tools/editor/chooseunitdlg.cpp
    source/tools/editor/chooseunitdlg.h
    source/tools/editor/damagebrush.cpp
    source/tools/editor/damagebrush.h
    source/tools/editor/dlgfileopen.cpp
    source/tools/editor/dlgfileopen.h
    source/tools/editor/dragtool.cpp
    source/tools/editor/dragtool.h
    source/tools/editor/dropzonebrush.cpp
    source/tools/editor/dropzonebrush.h
    source/tools/editor/editforestdlg.cpp
    source/tools/editor/editforestdlg.h
    source/tools/editor/editor.cpp
    source/tools/editor/editorcamera.h
    source/tools/editor/editordata.cpp
    source/tools/editor/editordata.h
    source/tools/editor/editores.cpp
    source/tools/editor/editorinterface.cpp
    source/tools/editor/editorinterface.h
    source/tools/editor/editormessages.h
    source/tools/editor/editormfc.cpp
    source/tools/editor/editormfc.h
    source/tools/editor/editorobjectmgr.cpp
    source/tools/editor/editorobjectmgr.h
    source/tools/editor/editorobjects.cpp
    source/tools/editor/editorobjects.h
    source/tools/editor/editortacmap.cpp
    source/tools/editor/editortacmap.h
    source/tools/editor/editorview.cpp
    source/tools/editor/editorview.h
    source/tools/editor/eraser.cpp
    source/tools/editor/eraser.h
    source/tools/editor/flattenbrush.cpp
    source/tools/editor/flattenbrush.h
    source/tools/editor/fogdlg.cpp
    source/tools/editor/fogdlg.h
    source/tools/editor/forest.cpp
    source/tools/editor/forest.h
    source/tools/editor/forestdlg.cpp
    source/tools/editor/forestdlg.h
    source/tools/editor/fractaldialog.cpp
    source/tools/editor/fractaldialog.h
    source/tools/editor/groupdialog.cpp
    source/tools/editor/groupdialog.h
    source/tools/editor/heightdlg.cpp
    source/tools/editor/heightdlg.h
    source/tools/editor/linkbrush.cpp
    source/tools/editor/linkbrush.h
    source/tools/editor/mainfrm.cpp
    source/tools/editor/mainfrm.h
    source/tools/editor/mainmenu.cpp
    source/tools/editor/mainmenu.h
    source/tools/editor/mapsizedlg.cpp
    source/tools/editor/mapsizedlg.h
    source/tools/editor/messagebox.h
    source/tools/editor/minebrush.cpp
    source/tools/editor/minebrush.h
    source/tools/editor/missiondialog.cpp
    source/tools/editor/missiondialog.h
    source/tools/editor/missionsettingsdlg.cpp
    source/tools/editor/missionsettingsdlg.h
    source/tools/editor/newsinglemission.cpp
    source/tools/editor/newsinglemission.h
    source/tools/editor/objective.cpp
    source/tools/editor/objective.h
    source/tools/editor/objectivedlg.cpp
    source/tools/editor/objectivedlg.h
    source/tools/editor/objectivesdlg.cpp
    source/tools/editor/objectivesdlg.h
    source/tools/editor/objectselectionbrush.cpp
    source/tools/editor/objectselectionbrush.h
    source/tools/editor/overlaybrush.cpp
    source/tools/editor/overlaybrush.h
    source/tools/editor/playersettingsdlg.cpp
    source/tools/editor/playersettingsdlg.h
    source/tools/editor/pointerselectobjectdlg.cpp
    source/tools/editor/pointerselectobjectdlg.h
    source/tools/editor/resource.h
    source/tools/editor/resourcestringselectiondlg.cpp
    source/tools/editor/resourcestringselectiondlg.h
    source/tools/editor/selectionbrush.cpp
    source/tools/editor/selectionbrush.h
    source/tools/editor/selectslopedialog.cpp
    source/tools/editor/selectslopedialog.h
    source/tools/editor/selectterraintypedlg.cpp
    source/tools/editor/selectterraintypedlg.h
    source/tools/editor/singlevaluedlg.cpp
    source/tools/editor/singlevaluedlg.h
    source/tools/editor/stdafx.cpp
    source/tools/editor/stdafx.h
    source/tools/editor/sundlg.cpp
    source/tools/editor/sundlg.h
    source/tools/editor/tacmaptga.cpp
    source/tools/editor/targetareadlg.cpp
    source/tools/editor/targetareadlg.h
    source/tools/editor/terrainbrush.cpp
    source/tools/editor/terrainbrush.h
    source/tools/editor/terraindlg.cpp
    source/tools/editor/terraindlg.h
    source/tools/editor/textmessagedlg.cpp
    source/tools/editor/textmessagedlg.h
    source/tools/editor/tgawnd.cpp
    source/tools/editor/tgawnd.h
    source/tools/editor/tilingfactorsdialog.cpp
    source/tools/editor/tilingfactorsdialog.h
    source/tools/editor/unitsettingsdlg.cpp
    source/tools/editor/unitsettingsdlg.h
    source/tools/editor/usertextedit.cpp
    source/tools/editor/usertextedit.h
    source/tools/editor/viewconditionoractiondlg.cpp
    source/tools/editor/viewconditionoractiondlg.h
    source/tools/editor/waterdlg.cpp
    source/tools/editor/waterdlg.h
    source/tools/editor/wavedlg.cpp
    source/tools/editor/wavedlg.h
    source/tools/viewer/resource.h
    source/tools/viewer/stdafx.cpp
    source/tools/viewer/stdafx.h
    source/tools/viewer/view.cpp)

add_executable(mechcommander2 ${SOURCE_FILES})